--- a/.github/workflows/completeworkflow.yml
+++ b/.github/workflows/completeworkflow.yml
@@ -23,9 +23,9 @@ jobs:
     needs: build
     name: Run the SCA scan on the source code
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@mmaster
       - name: RunSnyk to check for vulnerabilities
-        uses: snyk/actions/maven@main
+        uses: snyk/actions/maven@master
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
