--- a/.github/workflows/completeworkflow.yml
+++ b/.github/workflows/completeworkflow.yml
@@ -34,14 +34,7 @@ jobs:
     #needs: security
     name: Run DAST scan on the web application
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: main
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.6.1
-        with:
-          docker_name: 'owasp/zap2docker-stable'
-          target: 'http://testphp.vulnweb.com/'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+    - name: ZAP Scan
+      uses: zaproxy/action-full-scan@v0.11.0
+      with:
+        target: 'http://testphp.vulnweb.com/'
