--- a/.github/workflows/completeworkflow.yml
+++ b/.github/workflows/completeworkflow.yml
@@ -35,6 +35,6 @@ jobs:
     name: Run DAST scan on the web application
     steps:
     - name: ZAP Scan
-      uses: zaproxy/action-full-scan@v0.11.0
+      uses: zaproxy/action-baseline@v0.13.0
       with:
         target: 'http://testphp.vulnweb.com/'
